# ncrypt-rs

./: Cargo.toml  readme.md
crates/encryption/: Cargo.toml
crates/encryption/src/: encrypt.rs
src/: main.rs
src/app/: mod.rs  window.rs
src/gui/: app.rs  central_panel.rs  file_encryption.rs  left_panel.rs  mod.rs  text_hashing.rs
src/gui/ui/: file_encryption.rs  mod.rs  text_hashing.rs
