[package]
name = "n_crypt"
version = "1.6.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# GUI
eframe = {version = "=0.33.0", features = ["wgpu"]}
rfd = "0.14.1"
zeus-theme = "0.2.1"
zeus-widgets = "0.1.0"

# Crypto
sha3 = "0.10.8"
ncrypt-me = "0.1"

# Misc
lazy_static = "1.5.0"