[package]
name = "n_crypt"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# GUI
eframe = {version = "=0.34.1", features = ["wgpu"]}
egui_extras = { version = "=0.34.1", features = ["image"] }

rfd = "0.14.1"
zeus-theme = "0.4"
zeus-widgets = "0.4"
zeus-ui-components = {version = "0.4.0", features = ["secure-types", "qr-scanner"]}

# Crypto
sha3 = "0.10.8"
ncrypt-me = "0.2"

# Misc
lazy_static = "1.5.0"